Add Loader launcher: ./mvnw -Pindex exec:exec